--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
-    "express" : "~4.5.1",
-	  "body-parser" : "~1.4.2"
+    "azure-storage": "^0.6.0",
+    "body-parser": "~1.4.2",
+    "express": "~4.5.1",
+    "nconf": "^0.8.2",
+    "node-uuid": "^1.4.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": { 
-    "type" : "git",
-    "url" : "https://github.com/benripley/TakingStock-nodejs.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/benripley/TakingStock-nodejs.git"
   }
 }
